src/sample/Errors/C0032.st
// C0032: Cannot convert type '{type}' to type '{type}'
FUNCTION_BLOCK C0032

    METHOD A
        //
    END_METHOD

    // Assign to non-variable symbol
    A := 1;
END_FUNCTION_BLOCK